added images for the pieces

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -35,3 +35,12 @@
     cursor: pointer;
     user-select: none;
 }
+
+.piece{
+    width: 80px;
+    height: 80px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+}
+
