--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,6 +3,14 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
+    padding-top: 30px;
+}
+
+.turn{
+    font-size: 30px;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
 }
 
 .board{
@@ -19,26 +27,23 @@
     height: 99px;
     position: relative;
     display: block;
-    border-bottom: 1px solid black;
 }
 
 .square{
     width: 98.7px;
-    height: 98px;
-    border-right: 1px solid black;
+    height: 99px;
     position: relative;
     float: left;
     font-size: 60px;
     font-weight: bold;
     text-align: center;
-    line-height: 98px;
     cursor: pointer;
     user-select: none;
 }
 
 .piece{
     width: 38px;
-    height: 98px;
+    height: 99px;
     position: relative;
     overflow: hidden;
     background-size: cover;
