warning message for placing yourself in check is now accompanied by highlighting the offending piece in red

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,12 +14,14 @@
 }
 
 .warning{
-    font-size: 30px;
-    color: red;
+    width: 220px;
+    height: 100px;
+    font-size: 26px;
     font-weight: bold;
+    color: red;
     position: absolute;
-    left: calc(50% + 100px);
-    top: 30px;
+    left: calc(50% - 650px);
+    top: 300px;
 }
 
 .board{
