--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,14 +14,14 @@
 }
 
 .warning{
-    width: 220px;
-    height: 100px;
-    font-size: 26px;
+    width: 30vh;
+    height: 10vh;
+    font-size: 4vh;
     font-weight: bold;
     color: red;
     position: absolute;
-    left: calc(50% - (45vh + 230px));
-    top: 300px;
+    left: calc(50% - 75vh);
+    top: 40%;
 }
 
 .board{
