--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -61,3 +61,29 @@
     margin: 0 auto;
 }
 
+.gameover_div{
+    width: 300px;
+    height: 200px;
+    position: fixed;
+    left: calc(50% - 150px);
+    top: calc(50% - 100px);
+    background: #eee;
+    padding: 10px 10px;
+    box-shadow: 3px 3px 5px black;
+    border-radius: 3px;
+    z-index: 150;
+}
+
+.endgame_message{
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #2345c7;
+}
+
+.start_over{
+    position: absolute;
+    left: 113px;
+    top: 38px;
+}
