moved setting into its own component and that opens on game over now too

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -25,9 +25,11 @@
 }
 
 .settings_toggle{
+    height: 3vh;
+    font-size: 2vh;
     position: absolute;
-    top: 20%;
-    left: calc(50% - 65vh);
+    top: 2vh;
+    left: calc(50% - 40vh);
     cursor: pointer;
     user-select: none;
 }
