--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -41,6 +41,7 @@
     left: calc(50% - 45vh);
     top: 6vh;
     border: 5px solid #555;
+    transition: all 0.4s;
 }
 
 .row{
@@ -69,6 +70,7 @@
     overflow: hidden;
     background-size: cover;
     margin: 0 auto;
+    transition: all 0.4s;
 }
 
 .gameover_div{
